feat: add public beta organizations and console i18n
